# bifteck

./: LICENSE  README.md  bifteck.py  pyproject.toml
bifteck_archive/: 384_OD_test.xpt  DinosaurusRex.xpt  Experiment1.xpt  Multiplate test 2.xpt  Multiplate test.xpt  SIMPLIFICATION_SUMMARY.md  SlowExperiment.xpt  SlowExperiment_Plate1.txt  SlowExperiment_Plate2.txt  SlowExperiment_Plate3.txt  SlowExperiment_Plate4.txt  SlowExperiment_Plate5.txt  SlowExperiment_Plate6.txt  SlowExperiment_extracted.csv  SweepExperiment.xpt  SweepExperiment_Plate1_.txt  SweepExperiment_Plate2_.txt  SweepExperiment_Plate3_.txt  SweepExperiment_Plate4_.txt  SweepExperiment_Plate5_.txt  SweepExperiment_Plate6_.txt  SweepExperiment_extracted.csv  analyze_contents.py  analyze_data_header.py  analyze_footer.py  analyze_footer_landmarks.py  analyze_headers.py  analyze_new_files.py  analyze_temp_universal.py  archived_detection_methods.py  check_all_subsets.py  check_subset7.py  check_valid_subsets.py  extract_plate_info.py  find_all_timestamps.py  find_interval.py  find_plate_info.py  find_timestamp_stride.py  find_timestamps.py  investigate_subset6.py  (+13 more)
src/bifteck/: __init__.py  bifteck.py
