[project]
name = "bifteck"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "James Bagley", email = "JABagley9244@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "olefile>=0.47",
    "polars>=1.19.0",
]

[project.scripts]
bifteck = "bifteck:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
